--- a/config/app.yml
+++ b/config/app.yml
@@ -18,7 +18,7 @@ defaults: &defaults
   use_hash_in_js_filenames: true
 
   # url директории с ресурсами
-  public_path: "/"
+  public_path: "./"
 
   # использовать hot reload фичи
   use_hot_reload: false
