--- a/config/app.yml
+++ b/config/app.yml
@@ -8,7 +8,7 @@ defaults: &defaults
     use_logging: false
 
     # url для отправки post запроса (необходимо настроить CORS политику)
-    logging_url: './'
+    logging_url: 'http://google.com'
 
   # если установлен в true в сборку будут добавлены полифилы для старых
   # браузеров
@@ -50,7 +50,7 @@ development:
   client:
     <<: *client
     use_logging: true
-    logging_url: './'
+    logging_url: 'http://google.com'
     
   inject_polyfills: false
   use_hash_in_js_filenames: false
@@ -66,7 +66,7 @@ production:
   client:
     <<: *client
     use_logging: true
-    logging_url: './'
+    logging_url: 'http://google.com'
 
   inject_polyfills: true
   minimize_js: true
